grammars/tree-sitter-redextape-lambda/test/corpus/terms.txt
================================================================================
application is left-associative
================================================================================

f x y

--------------------------------------------------------------------------------

(source_file
  (application
    (application
      (identifier)
      (identifier))
    (identifier)))

================================================================================
a binder body extends as far right as it can
================================================================================

λx. f x

--------------------------------------------------------------------------------

(source_file
  (abstraction
    (identifier)
    (application
      (identifier)
      (identifier))))

================================================================================
the backslash alias parses identically
================================================================================

\x. x

--------------------------------------------------------------------------------

(source_file
  (abstraction
    (identifier)
    (identifier)))

================================================================================
parentheses, and a compiler-generated $ name
================================================================================

(λ$store. $store) (λa.λb. a)

--------------------------------------------------------------------------------

(source_file
  (application
    (parenthesized_term
      (abstraction
        (identifier)
        (identifier)))
    (parenthesized_term
      (abstraction
        (identifier)
        (abstraction
          (identifier)
          (identifier))))))

================================================================================
a bare abstraction is legal in argument position
================================================================================

f λx. x

--------------------------------------------------------------------------------

(source_file
  (application
    (identifier)
    (abstraction
      (identifier)
      (identifier))))

================================================================================
an abstraction argument's own body still extends as far right as it can
================================================================================

λx. x λy. y

--------------------------------------------------------------------------------

(source_file
  (abstraction
    (identifier)
    (application
      (identifier)
      (abstraction
        (identifier)
        (identifier)))))
